# flexiflow

./: .pre-commit-config.yaml  FLEXIFLOW_TEST_COVERAGE_REQUIREMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
examples/: config.yaml  new_rules.yaml
examples/embedded_app/: .gitignore  README.md  app.py  config.yaml  states.py
flexiflow/: __init__.py  __main__.py  api.py  cli.py  component.py  config_loader.py  engine.py  errors.py  event_manager.py  explain.py  imports.py  logger.py  pack_loader.py  reload.py  state_machine.py  visualize.py
flexiflow/extras/: __init__.py  persist_json.py  persist_sqlite.py  retry.py
tests/: conftest.py  fixture_states.py  test_cli_smoke.py  test_engine.py  test_errors.py  test_event_manager.py  test_example_integration.py  test_explain.py  test_imports.py  test_pack_loader.py  test_persist_json.py  test_persist_sqlite.py  test_public_api.py  test_retry.py  test_state_machine.py  test_visualize.py
